<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Viral Factor</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Viral Factor</string>
    <string name="score_text">Best Score 0</string>
    <string name="highscore_text">High Scores</string>
    <string name="new_game">New Game</string>
    <string name="exit_text">Exit</string>
    <string name="instruction_text">Instructions</string>
    <string name="options">Options</string>
    
    <!-- Create the configurations strings -->
    <string name="sound">Game Sounds</string>
    <string name="music">Game Music</string>
    <string name="vibration">Vibration</string>
    <string name="save_btn_text">Save Configuration</string>

</resources>