<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/gameSounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound" />

    <CheckBox
        android:id="@+id/gameMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music" />

    <CheckBox
        android:id="@+id/vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibration" />
    
            <Button
            android:id="@+id/saveConfigBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:text="@string/save_btn_text"
            android:textColor="#21dbd4"
            android:textStyle="bold" />
<!--             android:background="@null" -->

</LinearLayout>