<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    android:orientation="vertical" >

    <Button
        android:id="@+id/newGame_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/new_game"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/instructions_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/instruction_text"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/options_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/options"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/highScores_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/highscore_text"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/exit_text"
        android:textColor="@color/white" />

</LinearLayout>